[gd_scene load_steps=2 format=3 uid="uid://c8xqhg3kp7vjw"]

[ext_resource type="Script" uid="uid://f3ke6bgq7qsn" path="res://TitleScreen.gd" id="1_title"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_title")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.035, 0.03, 0.07, 1)

[node name="GradientOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.05, 0.15, 0.4)

[node name="ParticlesContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -280.0
offset_right = 250.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 1, 1)
theme_override_colors/font_shadow_color = Color(0.4, 0.2, 0.6, 0.5)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 56
text = "东方幻灵乱舞"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.65, 0.85, 1)
theme_override_font_sizes/font_size = 22
text = "Touhou Phantom Spirit Dance"
horizontal_alignment = 1

[node name="DecoLine" type="ColorRect" parent="VBoxContainer/TitleContainer"]
custom_minimum_size = Vector2(200, 2)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.6, 0.4, 0.8, 0.6)

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="MenuContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 12

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -45.0
offset_right = 200.0
offset_bottom = -15.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.45, 0.42, 0.55, 0.7)
theme_override_font_sizes/font_size = 14
text = "v0.1.0 Alpha"

[node name="CopyrightLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -45.0
offset_right = -25.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.45, 0.42, 0.55, 0.5)
theme_override_font_sizes/font_size = 12
text = "Powered by Godot Engine 4.5"
horizontal_alignment = 2
